{
    "name": "GameControls",
    "maps": [
        {
            "name": "AbilityUsage",
            "id": "ce6be5a2-1f5a-438b-8bce-9ede0816c4ef",
            "actions": [
                {
                    "name": "Ability 1",
                    "type": "Button",
                    "id": "efb7eb3e-c743-4875-9c3e-d5daf9e03dff",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SkipMove",
                    "type": "Button",
                    "id": "a3281fb2-238a-461b-9481-47eb58002776",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "02131171-122f-4604-bbb8-42bc4ee33f99",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ability 1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b3ec1cd8-8225-49e7-9069-e3f62feff9a5",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SkipMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "InGameMenu",
            "id": "a5fb702c-0295-4cf0-a8a8-ca13f97ba7ae",
            "actions": [
                {
                    "name": "Cancel",
                    "type": "Button",
                    "id": "cdd0985a-c5f7-47c9-b80b-2ed26ab79909",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CameraMovement",
                    "type": "PassThrough",
                    "id": "2073346e-bb7a-4332-bb13-28d933ed60ac",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Scroll",
                    "type": "Value",
                    "id": "2f9a3428-6d97-4c2d-991a-5d2d3efb60ed",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b0504dfb-acc9-48b8-bb9a-00be2745c946",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "91a3e3af-40d3-46a5-ba31-0406503f1eb1",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "070b70ef-1df4-4ab6-ba00-bdd89e3e7388",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "70727827-1e99-4c23-877b-dc19dc3c5224",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "b47a9a21-5f41-4bb8-a956-c6fe65293b8e",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "74ff44ea-b62b-4d0c-88dd-8984be490004",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "5ab97c88-df1a-4908-a97a-8dbb5a822ac8",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}